--- a/setup.cfg
+++ b/setup.cfg
@@ -287,6 +287,7 @@ exclude =
     src/helm/clients/image_generation/dalle_mini/*
     src/helm/clients/image_generation/mindalle/*
     src/helm/clients/vision_language/open_flamingo/*
+    src/helm/clients/vision_language/open_flamingo/*
 
 # Ignore completely:
 # E203 - White space before ':', (conflicts with black)
